<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/booking_confirmation_icon"
        android:src="@drawable/hotel_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        app:tint="@color/elegant_green"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/hotelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <!-- Guiding Text for Guest Name -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name_as_per_your_id"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_name_hint"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Guiding Text for ID Number -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_id_number_digits_only"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_id_hint"
            android:inputType="number"
            android:textColorHint="#546E7A" /> <!-- Changed inputType to number -->

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="20dp" /> <!-- Added margin for better UI -->
</LinearLayout>
