<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hotel_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:tint="@color/elegant_green"
        android:contentDescription="@string/booking_confirmation_icon" />


    <TextView
        android:id="@+id/hotelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_name_hint"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guest_id_hint"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/roomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_number_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_now"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:cornerRadius="8dp" />

</LinearLayout>