<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_circle_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:tint="@color/elegant_green"
        android:contentDescription="@string/booking_confirmation_icon" />


    <TextView
        android:id="@+id/confirmationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_message"
        android:textSize="22sp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_gravity="center"
        android:paddingBottom="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textAllCaps="false"
        app:cornerRadius="8dp" />

</LinearLayout>