<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- App Name -->
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Booking summary heading -->
    <TextView
        android:id="@+id/tv_booking_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Successfully Booked Text -->
    <TextView
        android:id="@+id/tv_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successfully_booked"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>
    <!-- Check Circle Image -->

    <ImageView
        android:id="@+id/img_check_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_circle_24dp_e8eaed_fill0_wght400_grad0_opsz24"
        app:tint="@color/elegant_green"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Back to Home Button -->
    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:layout_marginTop="10dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
